--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
               <div class="page-huaRT pageHua">右上角花</div>
               <div class="page-huaBL pageHua">左下角花</div>
               <div class="page-huaBR pageHua">右下角花</div>
-              5
+              <h3 class="bitTitle">个人评价</h3>
+              <p style="text-align: center;margin-top:50px;">这里还没有想好写点啥呢？</p>
           </div>
            <!--联系我-->
           <div class="swiper-slide page6">
@@ -190,6 +191,16 @@
               <div class="page-huaBL pageHua">左下角花</div>
               <div class="page-huaBR pageHua">右下角花</div>
             <img class="comp_image" src="images/6bg.webp" alt="">
+            <div class="page6-content">
+              <h3 class="bitTitle">感谢您阅读我的简历</h3>
+              <div class="aboutMy">
+                  <h4>请联系我</h4>
+                  <div>
+                    <img src="images/my.png" alt="">
+                  </div>
+              </div>
+            </div>
+            
           </div>
       </div>
       <!-- Add Pagination -->
